Use StackReference permission handling